--- a/Packages/gay.lvna.ui/Runtime/gay.lvna.ui.asmdef
+++ b/Packages/gay.lvna.ui/Runtime/gay.lvna.ui.asmdef
@@ -7,7 +7,9 @@
         "VRC.Udon",
         "VRC.Udon.Serialization.OdinSerializer",
         "UdonSharp.Runtime",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "UdonToolkitRuntime",
+        "gay.lvna.common.udon"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
